Update AttendanceReportServiceImplTest.java